Add GitHub gif, CSS overrides and first slides content

--- a/phaser-typescript-webpack/index.html
+++ b/phaser-typescript-webpack/index.html
@@ -7,7 +7,8 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/night.css">
+		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/custom.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -17,10 +18,34 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-						<h4>Configurando un Proyecto Phaser en Typescript y Webpack</h4>
+						<h3>Configurando un Proyecto Phaser en Typescript y Webpack</h3>
+						<div class="name-container">
+							<small>Por María Castro</small>
+						</div>
+						
+						<div class="social-logo-container">
+								<p>@BlackHarpy</p>
+								<img class="plain social-logo" src="images/GitHub-Logo-White.gif">
+								<img class="plain social-logo" src="images/GitHub-Logo-White.gif">
+						</div>
 				</section>
 				<section>
-					Cowabunga!
+					<h3>¿Por qué?</h3>
+				</section>
+				<section>
+						<section>
+							<h3>¿Cómo?</h3>
+						</section>
+					</section>
+					<section>
+						<h3>¿Y ahora?</h3>
+					</section>
+				<section>
+						<div class="email-container">
+								<img class="plain social-logo-small" src="images/GitHub-Logo-White.gif">								
+								<p>mariacastro87@gmail.com</p>
+						</div>
+					
 				</section>
 			</div>
 		</div>
