Title slide with gif logos

--- a/phaser-typescript-webpack/index.html
+++ b/phaser-typescript-webpack/index.html
@@ -18,15 +18,25 @@
 		<div class="reveal">
 			<div class="slides">
 				<section>
-						<h3>Configurando un Proyecto Phaser en Typescript y Webpack</h3>
-						<div class="name-container">
-							<small>Por María Castro</small>
+					<div class="title-container">
+						<div>
+								<!-- <img class="plain main-logo" src="images/phaser-white.gif">			(Not done yet) -->
+								<img class="plain main-logo" src="images/typescript-white.gif">		
+								<img class="plain main-logo" src="images/webpack-white.gif">																						
 						</div>
-						
+						<div>
+								<img class="plain title-img" src="images/title.gif">						
+								<div class="name-container">
+									<small>Por María Castro</small>
+								</div>
+						</div>
+					</div>
 						<div class="social-logo-container">
 								<p>@BlackHarpy</p>
-								<img class="plain social-logo" src="images/GitHub-Logo-White.gif">
-								<img class="plain social-logo" src="images/GitHub-Logo-White.gif">
+								<img class="plain social-logo" src="images/github-white.gif">
+								<img class="plain social-logo" src="images/twitter-white.gif">
+								<img class="plain social-logo" src="images/facebook-white.gif">
+								<img class="plain social-logo" src="images/reddit-white.gif">
 						</div>
 				</section>
 				<section>
@@ -42,7 +52,7 @@
 					</section>
 				<section>
 						<div class="email-container">
-								<img class="plain social-logo-small" src="images/GitHub-Logo-White.gif">								
+								<img class="plain social-logo-small" src="images/mail-white.gif">								
 								<p>mariacastro87@gmail.com</p>
 						</div>
 					
