--- a/phaser-typescript-webpack/index.html
+++ b/phaser-typescript-webpack/index.html
@@ -1,80 +1,83 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
-		<link rel="stylesheet" href="css/custom.css">
+	<title>Configurando un Proyecto Phaser en Typescript y Webpack, por María Castro</title>
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+	<link rel="stylesheet" href="css/reveal.css">
+	<link rel="stylesheet" href="css/theme/black.css">
+	<link rel="stylesheet" href="css/custom.css">
 
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>
-					<div class="title-container">
-						<div>
-								<!-- <img class="plain main-logo" src="images/phaser-white.gif">			(Not done yet) -->
-								<img class="plain main-logo" src="images/typescript-white.gif">		
-								<img class="plain main-logo" src="images/webpack-white.gif">																						
-						</div>
-						<div>
-								<img class="plain title-img" src="images/title.gif">						
-								<div class="name-container">
-									<small>Por María Castro</small>
-								</div>
+	<!-- Theme used for syntax highlighting of code -->
+	<link rel="stylesheet" href="lib/css/zenburn.css">
+
+</head>
+
+<body>
+	<div class="reveal">
+		<div class="slides">
+			<section>
+				<div class="title-container">
+					<div>
+						<!-- <img class="plain main-logo" src="images/phaser-white.gif">			(Not done yet) -->
+						<img class="plain main-logo" src="images/typescript-white.gif">
+						<img class="plain main-logo" src="images/webpack-white.gif">
+					</div>
+					<div>
+						<img class="plain title-img" src="images/title.gif">
+						<div class="name-container">
+							<small>Por María Castro</small>
 						</div>
 					</div>
-						<div class="social-logo-container">
-								<p>@BlackHarpy</p>
-								<img class="plain social-logo" src="images/github-white.gif">
-								<img class="plain social-logo" src="images/twitter-white.gif">
-								<img class="plain social-logo" src="images/facebook-white.gif">
-								<img class="plain social-logo" src="images/reddit-white.gif">
-						</div>
-				</section>
+				</div>
+				<div class="social-logo-container">
+					<p>@BlackHarpy</p>
+					<img class="plain social-logo" src="images/github-white.gif">
+					<img class="plain social-logo" src="images/twitter-white.gif">
+					<img class="plain social-logo" src="images/facebook-white.gif">
+					<img class="plain social-logo" src="images/reddit-white.gif">
+				</div>
+			</section>
+			<section>
+				<h3>¿Por qué?</h3>
+			</section>
+			<section>
 				<section>
-					<h3>¿Por qué?</h3>
+					<h3>¿Cómo?</h3>
 				</section>
-				<section>
-						<section>
-							<h3>¿Cómo?</h3>
-						</section>
-					</section>
-					<section>
-						<h3>¿Y ahora?</h3>
-					</section>
-				<section>
-						<div class="email-container">
-								<img class="plain social-logo-small" src="images/mail-white.gif">								
-								<p>mariacastro87@gmail.com</p>
-						</div>
-					
-				</section>
-			</div>
+			</section>
+			<section>
+				<h3>¿Y ahora?</h3>
+			</section>
+			<section>
+				<div class="email-container">
+					<img class="plain social-logo-small" src="images/mail-white.gif">
+					<p>mariacastro87@gmail.com</p>
+				</div>
+
+			</section>
 		</div>
+	</div>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+	<script src="lib/js/head.min.js"></script>
+	<script src="js/reveal.js"></script>
 
-		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
-			Reveal.initialize({
-				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
-			});
-		</script>
-	</body>
+	<script>
+		// More info about config & dependencies:
+		// - https://github.com/hakimel/reveal.js#configuration
+		// - https://github.com/hakimel/reveal.js#dependencies
+		Reveal.initialize({
+			dependencies: [
+				{ src: 'plugin/markdown/marked.js' },
+				{ src: 'plugin/markdown/markdown.js' },
+				{ src: 'plugin/notes/notes.js', async: true },
+				{ src: 'plugin/highlight/highlight.js', async: true, callback: function () { hljs.initHighlightingOnLoad(); } }
+			]
+		});
+	</script>
+</body>
+
 </html>
