Add Phaser gif logo to title slide

--- a/phaser-typescript-webpack/index.html
+++ b/phaser-typescript-webpack/index.html
@@ -22,7 +22,7 @@
 			<section>
 				<div class="title-container">
 					<div>
-						<!-- <img class="plain main-logo" src="images/phaser-white.gif">			(Not done yet) -->
+						<img class="plain main-logo" src="images/phaser-white.gif">
 						<img class="plain main-logo" src="images/typescript-white.gif">
 						<img class="plain main-logo" src="images/webpack-white.gif">
 					</div>
