--- a/phaser-typescript-webpack/index.html
+++ b/phaser-typescript-webpack/index.html
@@ -125,7 +125,7 @@
 					<div class="centered-spaced">
 						<div>
 							<img class="plain main-logo-medium" src="images/icons/commonjs.gif">
-							<p class="no-margin">CommonJS</p>
+							<p class="no-margin">Formatos de módulos</p>
 						</div>
 						<div>
 							<img class="plain main-logo-medium" src="images/icons/single-file.gif">
@@ -248,7 +248,6 @@ import 'phaser'
 				<section>
 					<span class="fragment">
 						<img class="plain gif-img" src="images/laptop-kitty.gif">
-						<p>¡A ver algo de código!</p>
 					</span>
 				</section>
 			</section>
@@ -272,6 +271,11 @@ import 'phaser'
 						<li>
 							<a href="http://www.photonstorm.com/phaser/advanced-phaser-and-typescript-projects">
 								Advanced Phaser and TypeScript projects
+							</a>
+						</li>
+						<li>
+							<a href="https://github.com/BlackHarpy/phaser-boilerplate">
+								Mi boilerplate de Phaser
 							</a>
 						</li>
 					</ul>
